syntax = "proto3";

package message;

service MessageService {
  rpc FindOne (MessageById) returns (Message);
  rpc FindMany (stream MessageById) returns (stream Message);
}

message MessageById {
  int32 id = 1;
}

message Message {
  int32 id = 1;
  string name = 2;
}